[package]
name = "backer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.23"
clap = { version = "4.0.32", features = ["derive"] }
futures = "0.3.25"
home = "0.5.4"
job_scheduler = "1.2.1"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
bincode = "1.3.3"
signal-hook = "0.3.14"
simple_logger = "4.0.0"
thiserror = "1.0.38"
time = "0.3.17"
walkdir = "2.3.2"
zip = "0.6.3"
tokio = { version = "1.24.1", features = ["full"] }
byteorder = "1.4.3"
flate2 = "1.0.25"
tar = "0.4.38"
qiniu-upload-manager = { version = "0.2.2", features = ["ureq"] }

[build-dependencies]
chrono = "0.4.23"
